# volatility3

./: .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  build-pyinstaller.yml  install.yml  ruff.yaml  test.yaml
development/: banner_server.py  compare-vol.py  pdbparse-to-json.py  schema_validate.py  stock-linux-json.py
development/mac-kdk/: parse_pbzx2.py
doc/source/: basics.rst  conf.py  getting-started-linux-tutorial.rst  getting-started-mac-tutorial.rst  getting-started-windows-tutorial.rst  glossary.rst  simple-plugin.rst  symbol-tables.rst  using-as-a-library.rst  vol-cli.rst  vol2to3.rst  volshell.rst
test/: README.md  conftest.py  test_volatility.py
test/plugins/windows/: test_scheduled_tasks.py
volatility3/cli/: __init__.py  text_filter.py  text_renderer.py
volatility3/cli/volshell/: __init__.py  generic.py  linux.py  mac.py  windows.py
volatility3/framework/: __init__.py  check_python_version.py  exceptions.py
volatility3/framework/automagic/: linux.py  mac.py  pdbscan.py  stacker.py  symbol_cache.py  symbol_finder.py
volatility3/framework/configuration/: __init__.py  requirements.py
volatility3/framework/constants/: __init__.py  _version.py
volatility3/framework/constants/linux/: __init__.py
volatility3/framework/contexts/: __init__.py
volatility3/framework/interfaces/: __init__.py  automagic.py  configuration.py  context.py  layers.py  objects.py  plugins.py  renderers.py  symbols.py
volatility3/framework/layers/: intel.py  leechcore.py  msf.py  qemu.py  registry.py  resources.py  vmware.py  xen.py
volatility3/framework/layers/scanners/: __init__.py
volatility3/framework/objects/: __init__.py  utility.py
volatility3/framework/plugins/: isfinfo.py  layerwriter.py  regexscan.py  timeliner.py
volatility3/framework/plugins/linux/: bash.py  boottime.py  capabilities.py  check_afinfo.py  check_creds.py  check_idt.py  check_modules.py  check_syscall.py  elfs.py  envars.py  hidden_modules.py  kmsg.py  kthreads.py  lsof.py  (+17 more)
volatility3/framework/renderers/: __init__.py  format_hints.py
volatility3/framework/symbols/: __init__.py  intermed.py  metadata.py
volatility3/schemas/: __init__.py
(+76 files in other folders)
